--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,3 +40,8 @@ models:
     # Applies to all files under models/example/
     example:
       +materialized: table
+    # This config block applies to all models in your project
+    +schema: "{{ generate_schema_name(custom_schema_name='your_project_schema', node=model) }}"
+
+# Custom macro for schema naming based on the target
+macro-paths: ["macros"] # Ensure your macros folder is defined
