--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,9 +34,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 # instead be materialized as tables. Any models you add to the root of the models folder will 
 # continue to be built as views. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
-
 models:
   my_new_project:
     # Applies to all files under models/example/
     example:
       +materialized: table
+      +schema: "{{ 'dbt_' + env_var('DBT_BRANCH_NAME') }}"
+
